// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateComposerJson > genera composer.json válido para monolith 1`] = `
"{
  "name": "fractal/test-project",
  "type": "project",
  "description": "Proyecto Laravel generado por Fractal (monolith)",
  "keywords": [
    "laravel",
    "fractal"
  ],
  "license": "MIT",
  "require": {
    "php": "^8.2",
    "laravel/framework": "^11.0",
    "laravel/sanctum": "^4.0"
  },
  "require-dev": {
    "laravel/pint": "^1.0",
    "phpunit/phpunit": "^11.0"
  },
  "autoload": {
    "psr-4": {
      "App\\\\": "app/"
    }
  },
  "autoload-dev": {
    "psr-4": {
      "Tests\\\\": "tests/"
    }
  },
  "scripts": {
    "post-autoload-dump": [
      "Illuminate\\\\Foundation\\\\ComposerScripts::postAutoloadDump",
      "@php artisan package:discover --ansi"
    ]
  },
  "extra": {
    "laravel": {
      "dont-discover": []
    }
  },
  "config": {
    "optimize-autoloader": true,
    "preferred-install": "dist",
    "sort-packages": true,
    "allow-plugins": true,
    "policy": {
      "advisories": {
        "block": false
      }
    }
  },
  "minimum-stability": "stable",
  "prefer-stable": true
}"
`;

exports[`generateComposerJson > genera composer.json válido para monorepo 1`] = `
"{
  "name": "fractal/test-project",
  "type": "project",
  "description": "Proyecto Laravel generado por Fractal (monorepo)",
  "keywords": [
    "laravel",
    "fractal"
  ],
  "license": "MIT",
  "require": {
    "php": "^8.2",
    "laravel/framework": "^11.0",
    "laravel/sanctum": "^4.0"
  },
  "require-dev": {
    "laravel/pint": "^1.0",
    "phpunit/phpunit": "^11.0"
  },
  "autoload": {
    "psr-4": {
      "App\\\\": "app/"
    }
  },
  "autoload-dev": {
    "psr-4": {
      "Tests\\\\": "tests/"
    }
  },
  "scripts": {
    "post-autoload-dump": [
      "Illuminate\\\\Foundation\\\\ComposerScripts::postAutoloadDump",
      "@php artisan package:discover --ansi"
    ]
  },
  "extra": {
    "laravel": {
      "dont-discover": []
    }
  },
  "config": {
    "optimize-autoloader": true,
    "preferred-install": "dist",
    "sort-packages": true,
    "allow-plugins": true,
    "policy": {
      "advisories": {
        "block": false
      }
    }
  },
  "minimum-stability": "stable",
  "prefer-stable": true
}"
`;

exports[`generateComposerJson > genera composer.json válido para multirepo-api 1`] = `
"{
  "name": "fractal/test-project",
  "type": "project",
  "description": "Proyecto Laravel generado por Fractal (multirepo-api)",
  "keywords": [
    "laravel",
    "fractal"
  ],
  "license": "MIT",
  "require": {
    "php": "^8.2",
    "laravel/framework": "^11.0",
    "laravel/sanctum": "^4.0"
  },
  "require-dev": {
    "laravel/pint": "^1.0",
    "phpunit/phpunit": "^11.0"
  },
  "autoload": {
    "psr-4": {
      "App\\\\": "app/"
    }
  },
  "autoload-dev": {
    "psr-4": {
      "Tests\\\\": "tests/"
    }
  },
  "scripts": {
    "post-autoload-dump": [
      "Illuminate\\\\Foundation\\\\ComposerScripts::postAutoloadDump",
      "@php artisan package:discover --ansi"
    ]
  },
  "extra": {
    "laravel": {
      "dont-discover": []
    }
  },
  "config": {
    "optimize-autoloader": true,
    "preferred-install": "dist",
    "sort-packages": true,
    "allow-plugins": true,
    "policy": {
      "advisories": {
        "block": false
      }
    }
  },
  "minimum-stability": "stable",
  "prefer-stable": true
}"
`;
